[package]
name = "vrf-poker-activity"
version = "0.1.0"
edition = "2021"
authors = ["Kaloyan <gangov1@gmail.com>", "Archana <archanav1929@gmail.com>", "Thang X. Vu <hi@thangx.vu>", "Martin <martin.hofmann95@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorrkel = "0.11.4"
merlin = "3.0.0"
rand = "0.8.5"
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42", features = [
    "full_crypto",
    "std",
] }
